cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPart__c/APHA_TestPart__c.object-meta.xml
<CustomObject>
    <label>Test Part</label>
    <nameField>
        <displayFormat>TP-{00000000}</displayFormat>
        <label>Test Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>