cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPart__c/fields/APHA_Day1__c.field-meta.xml
<CustomField>
    <fullName>APHA_Day1__c</fullName>
    <description>Date of first visit of Test</description>
    <label>Day 1</label>
    <required>true</required>
    <type>Date</type>
</CustomField>