cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPart__c/fields/APHA_Day2__c.field-meta.xml
<CustomField>
    <fullName>APHA_Day2__c</fullName>
    <description>Date of Second visit of Test</description>
    <label>Day 2</label>
    <required>true</required>
    <type>Date</type>
</CustomField>