cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPart__c/fields/APHA_IdentityOfCertifiyngVet__c.field-meta.xml
<CustomField>
    <fullName>APHA_IdentityOfCertifiyngVet__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>First name &amp; Last name of VET</description>
    <label>Identity of Certifiyng Vet</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>