cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPart__c/fields/APHA_IdentityOfReviewer__c.field-meta.xml
<CustomField>
    <fullName>APHA_IdentityOfReviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identity of reviewer</description>
    <label>Identity of Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>APHA_TestPartsReviewed</relationshipName>
    <type>Lookup</type>
</CustomField>