cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPart__c/fields/APHA_NumberOfInconclusiveReactors__c.field-meta.xml
<CustomField>
    <fullName>APHA_NumberOfInconclusiveReactors__c</fullName>
    <description>Rollup to Ear Tag Info - Result - Calculated = Inconclusive Reaction</description>
    <label>Number of Inconclusive reactors</label>
    <summaryFilterItems>
        <field>APHA_TestPartResult__c.APHA_ResultCalculated__c</field>
        <operation>equals</operation>
        <value>Inconclusive Reaction</value>
    </summaryFilterItems>
    <summaryForeignKey>APHA_TestPartResult__c.APHA_TestPart__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>