cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPart__c/fields/APHA_NumberTested__c.field-meta.xml
<CustomField>
    <fullName>APHA_NumberTested__c</fullName>
    <label>Number Tested</label>
    <summaryForeignKey>APHA_TestPartResult__c.APHA_TestPart__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>