cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPart__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Test Parts</relationshipLabel>
    <relationshipName>APHA_TestParts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>