cattlevax-sf-sandbox/force-app/main/default/objects/APHA_TestPart__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>APHA_NumberTested__c</columns>
    <columns>APHA_Day1__c</columns>
    <columns>APHA_Day2__c</columns>
    <columns>APHA_IdentityOfTester__c</columns>
    <columns>APHA_IdentityOfCertifyingVet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>